--- a/PersonalSite/news.html
+++ b/PersonalSite/news.html
@@ -12,9 +12,10 @@
             <a href= 'index.html'>Home</a>
             <a href="roster.html">Roster</a>
             <a href="news.html">News</a>
-         </nav>
+        </div>
     </header>
-    <a class="twitter-timeline" data-height = "800" href="https://twitter.com/nuggets?ref_src=twsrc%5Etfw">Tweets by nuggets</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <h1 id="newsintro">News for The Denver Nuggets</h1>
+    <a class="twitter-timeline" data-height="800" href="https://twitter.com/nuggets?ref_src=twsrc%5Etfw">Tweets by nuggets</a> <script async src="https://platform.twitter.com/widgets.js"></script>
     <footer>
         <p>Nougets &copy; 2023 - Ella Patten</p>
         <p><a href="site-plan-personal.html">Site Plan</a></p>
