--- a/PersonalSite/roster.html
+++ b/PersonalSite/roster.html
@@ -12,12 +12,12 @@
         <a href= 'index.html'>Home</a>
         <a href="roster.html">Roster</a>
         <a href="news.html">News</a>
-     </nav>
+  </div>
 </header>
-  <h1 id="rostertit">Roster for Denver Nuggets</h1>
+  <h1 id="rostertit">Roster for The Denver Nuggets</h1>
     <div id="roster_content">
         <div id= "Braun" onclick="Braun()">  
-            <span class= "on" id="Braunon">  
+            <div class= "on" id="Braunon">  
                 <img src="images/braun0.png" alt="Braun">
                 <p >
                 <b class="name">Christian Braun</b>
@@ -32,8 +32,9 @@
                 <br>    
                 College: Kansas
                 </p>
-            </span>
-            <div class="off" class='hide' id="Braunoff">
+              <img id="arrow" src="images/turn.png" alt="arrow">
+              </div>
+            <div class="off" id="Braunoff">
               <div class="season">  
               <p>
                 <b>Last season:</b>
@@ -67,7 +68,7 @@
               </div>
         </div>
         <div id= "mpj" onclick="mpj()">
-            <span class= "on" id="mpjon">
+            <div class= "on" id="mpjon">
                 <img src="images/mpj1.png" alt="MPJ">
                 <p>
                 <b>Michael Porter Jr.</b>
@@ -82,8 +83,8 @@
                 <br>
                 College: Missouri
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="mpjoff">
+            </div>
+            <div class="off" id="mpjoff">
               <div class="season">
                 <p>
                     <b>Last season:</b>
@@ -114,10 +115,10 @@
                     3P%: 41.4
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
         <div id= "strawther" onclick="strawther()">
-            <span class="on" id="strawtheron">
+            <div class="on" id="strawtheron">
                 <img src="images/strawther3.png" alt="Strawther">
                 <p>
                 <b class="name">Julian Strawther</b>
@@ -132,17 +133,17 @@
                 <br>
                 College: Gonzaga
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="strawtheroff">
+            </div>
+            <div class="off" id="strawtheroff">
               <div class="new">  
                 <p>
                     <b>N/A - first year playing NBA</b>
                   </p>
               </div>
-            </span>
+            </div>
         </div>
         <div id= "tyson" onclick="tyson()">
-            <span class="on" id="tysonon">
+            <div class="on" id="tysonon">
                 <img src="images/tyson4.png" alt="Tyson">
                 <p>
                   <b class="name">Hunter Tyson</b>
@@ -157,17 +158,17 @@
                   <br>
                   College: Clemson
                 </p>
-            </span>
-            <span class= "off" class = 'hide' id="tysonoff">
+            </div>
+            <div class= "off" id="tysonoff">
               <div class="new">  
               <p>
                     <b>N/A - first year playing NBA</b>
                 </p>
                 </div>
-            </span>
+            </div>
         </div>
         <div id= "caldwell" onclick="caldwell()">
-            <span class="on" id="caldwellon">
+            <div class="on" id="caldwellon">
                 <img id="caldimg" src="images/caldwell-pope5.png" alt="Caldwell-Pope">
                 <p>
                   <b class ="name">Kentavious <br>Caldwell-Pope</b>
@@ -182,8 +183,8 @@
                   <br>
                   College: Georgia
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="caldwelloff">
+            </div>
+            <div class="off" id="caldwelloff">
               <div class="season">  
               <p>
                     <b>Last season:</b>
@@ -214,10 +215,10 @@
                     3P%: 36.6
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
         <div onclick="dejordan()">
-            <span class="on" id="dejordanon">
+            <div class="on" id="dejordanon">
                 <img id="jimg" src="images/dejordan6.png" alt="DeJordan">
                 <p>
                 <b class="name">DeAndre Jordan</b>
@@ -232,8 +233,8 @@
                 <br>
                 College: Texas A&M
                 </p>
-            </span>
-            <span class= "off" class= 'hide' id="dejordanoff">
+            </div>
+            <div class= "off" id="dejordanoff">
               <div class="season">  
               <p>
                     <b>Last season:</b>
@@ -265,10 +266,10 @@
                     3P%: 15.4
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
         <div onclick="jackson()">
-            <span class= "on" id="jacksonon">
+            <div class= "on" id="jacksonon">
                 <img src="images/jackson7.png" alt="Jackson">
                 <p>
                   <b class="name">Reggie Jackson</b>
@@ -283,8 +284,8 @@
                   <br>
                   College: Boston
                 </p>
-            </span>
-            <span class = "off" class= 'hide' id="jacksonoff">
+            </div>
+            <div class = "off" id="jacksonoff">
               <div class="season">  
               <p>
                     <b>Last season:</b>
@@ -315,10 +316,10 @@
                     3P%: 34.4
                   </p>             
                   </div>
-            </span>
+            </div>
         </div>
         <div onclick="watson()">
-            <span class="on" id="watsonon">
+            <div class="on" id="watsonon">
                 <img src="images/watson8.png" alt="Watson">
                 <p>
                   <b class="name">Peyton Watson</b>
@@ -333,8 +334,8 @@
                   <br>
                   College: UCLA
                 </p>
-            </span>
-            <span class = "off" class= 'hide' id="watsonoff">
+            </div>
+            <div class = "off" id="watsonoff">
               <div class="season">  
               <p>
                     <b>Last season:</b>
@@ -365,10 +366,10 @@
                     3P%: 40
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
         <div onclick="holiday()">
-            <span class="on" id="holidayon">
+            <div class="on" id="holidayon">
                 <img src="images/holiday9.png" alt="Holiday">
                 <p>
                  <b class="name">Justin Holiday</b>
@@ -383,8 +384,8 @@
                   <br>
                   College: Washington
                 </p>
-            </span>
-            <span class = "off" class= 'hide' id="holidayoff">
+            </div>
+            <div class = "off" id="holidayoff">
               <div class="season">  
               <p>
                     <b>First season with the Nuggets</b>
@@ -401,10 +402,10 @@
                     3P%: 36.3
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
         <div onclick="key()">
-            <span class="on" id="keyon">
+            <div class="on" id="keyon">
                 <img src="images/key11.png" alt="Key">
                 <p>
                   <b class="name"> Braxton Key </b>
@@ -419,8 +420,8 @@
                   <br>
                   College: Virginia
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="keyoff">
+            </div>
+            <div class="off" id="keyoff">
               <div class="season"> 
               <p>
                     <b>First season with Nuggets</b>
@@ -437,10 +438,10 @@
                     3P%: 27.3
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
         <div onclick="jokic()">
-            <span class="on" id="jokicon">
+            <div class="on" id="jokicon">
                 <img src="images/jokic15.png" alt="Jokic">
                 <p>
                   <b class="name">Nikola Jokic</b>
@@ -455,8 +456,8 @@
                   <br>
                   College: --
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="jokicoff">
+            </div>
+            <div class="off" id="jokicoff">
               <div class="season">  
               <p>
                     <b>Last season:</b>
@@ -487,10 +488,10 @@
                     3P%: 34.8
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
         <div onclick="gillespie()">
-            <span class="on" id="gillespieon">
+            <div class="on" id="gillespieon">
                 <img src="images/gillespie21.png" alt="Gillespie">
                 <p>
                   <b class="name">Collin Gillespie</b>
@@ -505,15 +506,15 @@
                   <br>
                   College: Villanova
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="gillespieoff">
+            </div>
+            <div class="off" id="gillespieoff">
                 <p class="new">
                     <b>N/A- first year playing NBA</b>
                 </p>
-            </span>
+            </div>
         </div>
         <div onclick="nnaji()">
-            <span class="on" id="nnajion">
+            <div class="on" id="nnajion">
                 <img src="images/nnaji22.png" alt="Nnaji">
                 <p>
                   <b class="name">Zeke Nnaji</b>
@@ -528,8 +529,8 @@
                   <br>
                   College: Arizona
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="nnajioff">
+            </div>
+            <div class="off" id="nnajioff">
               <div class="season">
               <p>  
               <b>Last season:</b>
@@ -560,10 +561,10 @@
                 3P%: 38
               </p>
               </div>
-            </span>
+            </div>
         </div>
         <div onclick="pickett()">
-            <span class="on" id="picketton">
+            <div class="on" id="picketton">
                 <img src="images/picett24.png" alt="Pickett">
                 <p>
                   <b class="name">Jalen Pickett</b>
@@ -578,16 +579,16 @@
                   <br>
                   College: Siena
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="pickettoff">
+            </div>
+            <div class="off" id="pickettoff">
                 
               <p class="new">
                     <b>N/A- first Season in NBA</b>
                   </p>
-            </span>
+            </div>
         </div>
         <div onclick="murray()">
-            <span class="on" id="murrayon">
+            <div class="on" id="murrayon">
                 <img src="images/murray27.png" alt="Murray">
                 <p>
                   <b class="name">Jamal Murray</b>
@@ -602,8 +603,8 @@
                   <br>
                   College: Kentucky
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="murrayoff">
+            </div>
+            <div class="off" id="murrayoff">
               <div class="season">  
               <p>
                     <b>Last season:</b>
@@ -634,10 +635,10 @@
                     3P%: 37.4
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
         <div onclick="huff()">
-            <span class="on" id="huffon">
+            <div class="on" id="huffon">
                 <img src="images/huff34.png" alt="Huff">
                 <p>
                   <b class="name">Jay Huff</b>
@@ -652,8 +653,8 @@
                   <br>
                   College: Virginia
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="huffoff">
+            </div>
+            <div class="off" id="huffoff">
               <div class="season">  
               <p>
                     <b>First year with Nuggets</b>
@@ -670,10 +671,10 @@
                     3P%: 42.9
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
         <div onclick="cancar()">
-            <span class="on" id="cancaron">
+            <div class="on" id="cancaron">
                 <img src="images/cancar31.png" alt="Cancar">
                 <p>
                   <b class="name">Vlatko Cancar</b>
@@ -688,8 +689,8 @@
                   <br>
                   College: --
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="cancaroff">
+            </div>
+            <div class="off" id="cancaroff">
               <div class="season">  
               <p>
                     <b>Last season:</b>
@@ -720,10 +721,10 @@
                     3P%: 36.1
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
         <div onclick="gordon()">
-            <span class="on" id="gordonon">
+            <div class="on" id="gordonon">
                 <img src="images/gordon50.png" alt="Gordon">
                 <p>      
                   <b class="name">Aaron Gordon</b>
@@ -738,8 +739,8 @@
                   <br>
                   College: Arizona
                 </p>
-            </span>
-            <span class="off" class= 'hide' id="gordonoff">
+            </div>
+            <div class="off" id="gordonoff">
               <div class="season">  
               <p>
                     <b>Last season:</b>
@@ -770,7 +771,7 @@
                     3P%: 32.4
                   </p>
                   </div>
-            </span>
+            </div>
         </div>
     </div>
     <footer>
