--- a/PersonalSite/roster.html
+++ b/PersonalSite/roster.html
@@ -14,7 +14,8 @@
         <a href="news.html">News</a>
   </div>
 </header>
-  <h1 id="rostertit">Roster for The Denver Nuggets</h1>
+  <h1 id="rostertit">ROSTER FOR THE DENVER NUGGETS</h1>
+  <p id="infos">Click player card to show stats</p>
     <div id="roster_content">
         <div id= "Braun" onclick="Braun()">  
             <div class= "on" id="Braunon">  
@@ -31,9 +32,10 @@
                 Height: 6'6"
                 <br>    
                 College: Kansas
-                </p>
-              <img id="arrow" src="images/turn.png" alt="arrow">
-              </div>
+                
+              
+              </p>
+             </div>
             <div class="off" id="Braunoff">
               <div class="season">  
               <p>
