--- a/PersonalSite/news.html
+++ b/PersonalSite/news.html
@@ -32,7 +32,7 @@
         </a>
         <a href="https://basketnews.com/news-197903-denver-nuggets-eliminated-from-nba-in-season-tournament-title-contention.html" target="_blank">
             <div id="story3">
-                <img src="images/story3.jpg">
+                <img src="images/story3.jpg" alt = "In season courts">
                 <h4 class="titles">NBA in-season tournament</h4>
             </div>
         </a>
@@ -61,6 +61,5 @@
         </div>
     </footer>
 </body>
-<div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="Qc5jPXCO"></script>
 </html>
