--- a/PersonalSite/index.html
+++ b/PersonalSite/index.html
@@ -45,6 +45,7 @@
         </div>
         </main>
         <footer>
+            <img id="logos" src="images/nougetlogo.png" alt="logo">
             <p>Nougets &copy; 2023 - Ella Patten</p>
             <p><a href="site-plan-personal.html">Site Plan</a></p>
             <div class="social">
