--- a/PersonalSite/news.html
+++ b/PersonalSite/news.html
@@ -47,6 +47,7 @@
         </div>
     </div>
     <footer>
+        <img id="logos" src="images/nougetlogo.png" alt="logo">
         <p>Nougets &copy; 2023 - Ella Patten</p>
         <p><a href="site-plan-personal.html">Site Plan</a></p>
         <div class="social">
