--- a/PersonalSite/roster.html
+++ b/PersonalSite/roster.html
@@ -778,7 +778,8 @@
         </div>
     </div>
     <footer>
-        <p>Nougets &copy; 2023 - Ella Patten</p>
+      <img id="logos" src="images/nougetlogo.png" alt="logo">  
+      <p>Nougets &copy; 2023 - Ella Patten</p>
         <p><a href="site-plan-personal.html">Site Plan</a></p>
         <div class="social">
             <a href="https://facebook.com" target = "_blank">
